# statquest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  manifest.in  requirements.txt  setup.cfg  setup.py  statquest.spec
data/: titanic3_tests.txt
src/: statquest_data.py  statquest_database.py  statquest_globals.py  statquest_observable.py  statquest_relation.py  statquest_statistics.py
statquest/: __main__.py  borderedframe.py  messages.po  progress.py  scrollableframe.py  snipets.py  statquest.py  statquest_component.py  statquest_dataframe.py  statquest_engine.py  statquest_filesnames.py  statquest_globals.py  statquest_gui.py  statquest_input.py  statquest_intro.py  statquest_launcher.py  statquest_locale.py  statquest_main.py  statquest_observable.py  statquest_output.py  statquest_outtro.py  statquest_parameters.py  statquest_relation.py  statquest_relations.py  statquest_statistics.py  statquest_suite.py  statquest_tests.py  statquest_view.py
statquest/locale/: messages.po  messages.pot
statquest/locale/pl_PL/: intro.txt
statquest/locale/pl_PL/LC_MESSAGES/: argparse.po  messages.po
tests/: gen_1.py  gen_2.py  test_statquest.py  test_statquest_dataframe.py  test_statquest_globals.py  test_statquest_input.py  test_statquest_locale.py  test_statquest_main.py  test_statquest_observable.py  test_statquest_output.py  test_statquest_relation.py  test_statquest_relations.py  test_statquest_tests.py
