[metadata]
name = statquest
version = 0.4.0.1
description = Statistical software to find dependent observables.0
author = Sławomir Marczyński
author_email =

[options]
packages = find:
install_requires =
    pandas
include_package_data=True

[options.package_data]
statquest = locale/*

[options.packages.find]
include=
    statquest*
exclude=
    tests*
